# iu-ir-lab-04

./: .gitignore  common.env  run_all.sh
node_services/: package-lock.json  package.json  state.ts  tsconfig.json
node_services/@types/fastify/: index.d.ts
node_services/common/: fabric.ts  healthcheck.ts  models.ts  persistence.ts  storage.ts
node_services/frontend/: index.ts
node_services/frontend/templates/: index.html  preview.html
node_services/indexer/: finalizeRebuildIndex.ts  index.ts  indexes.ts  lookup.ts  rebuildIndex.ts  state.ts  storage.ts  storeToken.ts  tokenMap.ts  tokenMapPair.ts
node_services/master/: finalizeRebuildIndex.ts  index.ts  lookup.ts  processDoc.ts  rebuildIndex.ts  wait.ts
node_services/storage/: index.ts
node_services/tokenizer/: index.ts  processDoc.ts
python_services/: pyproject.toml  run_crawler.py  run_secondary.py  run_worker.py
python_services/services/crawler/: __init__.py  processing.py
python_services/services/secondary/: __init__.py  indexes.py  queries.py
python_services/services/worker/: __init__.py  text_processing.py  tokenize.py
