[tool.poetry]
name = "python_services"
version = "0.1.0"
description = ""
authors = ["Leonid Lygin <ionagamed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6"
nltk = "^3.4"
unidecode = "^1.1"
jellyfish = "^0.7.2"
bs4 = "^0.0.1"
requests = "^2.23"
pymongo = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
